--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -42,7 +42,7 @@ class="bg-white h-16 flex items-center justify-between pt-3 pb-3 pr-8 px-8"
 
 <!-- mobile -->
 <nav [ngClass]="{'menu-open': !isOpen, 'menu-closed': isOpen}" [class.open]="isOpen"
-    class="w-full h-80 bacgroud-orange fixed flex items-center justify-center">
+    class="w-full h-80 bacgroud-orange flex items-center justify-center">
     <mat-card class="card-color">
         <div class="flex flex-col items-center justify-center w-40">
             <div class="div"> <a href="" class="aHover">Produtos</a> </div>
