--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-header></app-header>
+<!-- <app-header class="fixed w-screen z-10 h-16"></app-header>
+<app-pagina1></app-pagina1> -->
+
+<app-testes></app-testes>
